# src/api/handlers.go
@@ -7,8 +7,8 @@ import (
 	"time"
 )
 
-// HelloHandler @Summary      Получить приветствие
-// @Description  Возвращает сообщение "Hello, World!"
+// HelloHandler @Summary
+// @Description  Returns "Hello, World!"
 // @Tags         example
 // @Accept       json
 // @Produce      json
@@ -18,39 +18,38 @@ func HelloHandler(c *gin.Context) {
 	c.JSON(200, gin.H{"message": "Hello, World!"})
 }
 
-// GetHandler - обработчик запроса /v1/get/{key}
-// @Summary Получить значение по ключу
-// @Description Возвращает переданный ключ
+// GetHandler - /v1/get/{key}
+// @Summary Get key from path param
+// @Description Return key from path param
 // @Tags example
 // @Accept json
 // @Produce json
-// @Param key path string true "Ключ"
+// @Param key path string true "Key"
 // @Success 200 {object} map[string]string
 // @Router /api/v1/key/{key} [get]
 func GetHandler(c *gin.Context) {
 	fmt.Print("dsadsadsa")
-	key := c.Param("key") // Получаем параметр key из URL
+	key := c.Param("key")
 	c.JSON(http.StatusOK, gin.H{"key": key})
 }
 
-// SearchHandler - обработчик для /v1/search
-// @Summary Поиск по query-параметрам
-// @Description Возвращает результаты поиска по параметру "q" и отображает выбранную страницу через параметр "page"
+// SearchHandler - /v1/search
+// @Summary Get query params
+// @Description Get "q" and "page" query params
 // @Tags search
 // @Accept  json
 // @Produce json
-// @Param q query string false "Поисковый запрос"  // Параметр q (необязательный)
-// @Param page query int false "Номер страницы"    // Параметр page (необязательный, по умолчанию 1)
+// @Param q query string false "Search query"  // Param q (not required, by default - base)
+// @Param page query int false "Pagination"    // Param page (not required, by default - 1)
 // @Success 200 {object} map[string]string
 // @Failure 400 {object} map[string]string
 // @Router /api/v1/search [get]
 func SearchHandler(c *gin.Context) {
-	// Получение query-параметра "q"
-	query := c.DefaultQuery("q", "default") // Если параметр не передан, будет использовано "default"
-	page := c.DefaultQuery("page", "1")     // Параметр для страницы с дефолтным значением "1"
+	query := c.DefaultQuery("q", "base")
+	page := c.DefaultQuery("page", "1")
 
-	// Можно также использовать c.Query() для получения значения параметра без дефолтного значения:
-	// q := c.Query("q")  // Вернется пустая строка, если параметр "q" не найден
+	// Can use without default:
+	// q := c.Query("q")  // If "q" not find default value blank string ""
 
 	c.JSON(http.StatusOK, gin.H{
 		"query": query,
@@ -58,27 +57,26 @@ func SearchHandler(c *gin.Context) {
 	})
 }
 
-// CreateHandler - обработчик для /v1/create
-// @Summary Создать новый объект
-// @Description Создает новый объект, принимая JSON в теле запроса
+// CreateHandler -/v1/create
+// @Summary Data from body
+// @Description Received json body
 // @Tags create
 // @Accept  json
 // @Produce json
-// @Param body body map[string]interface{} true "Тело запроса"
+// @Param body body map[string]interface{} true "Body"
 // @Success 200 {object} map[string]string
 // @Failure 400 {object} map[string]string
 // @Router /api/v1/create [post]
 func CreateHandler(c *gin.Context) {
-	var body map[string]interface{} // Структура для тела запроса
+	var body map[string]interface{} // Blank struct of body, can receive any body
 
-	// Связываем тело запроса с переменной
+	// Deserialize body
 	if err := c.ShouldBindJSON(&body); err != nil {
-		// Если произошла ошибка при парсинге JSON
+		// Error if not correct json body
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 
-	// Ответ с принятым JSON
 	c.JSON(http.StatusOK, gin.H{
 		"received": body,
 	})
@@ -86,24 +84,24 @@ func CreateHandler(c *gin.Context) {
 
 // TEST async
 func Handler1(c *gin.Context) {
-	time.Sleep(10 * time.Second) // Симуляция длительной операции
+	time.Sleep(10 * time.Second) // Simulation of work
 	c.JSON(200, gin.H{"message": "handler 1 completed after 10 seconds"})
 }
 func Handler2(c *gin.Context) {
-	time.Sleep(1 * time.Second) // Симуляция длительной операции
+	time.Sleep(1 * time.Second) // Simulation of work
 	c.JSON(200, gin.H{"message": "handler 2 completed after 1 second"})
 }
 
-// GetUserHandlerWithSchema - Ручка со схемой
-// @Summary Ручка с указанной схемой
+// GetUserHandlerWithSchema - /api/v2/users/{id}
+// @Summary Endpoint with schema
 // @Description description
 // @Tags with_schema
 // @Accept  json
 // @Produce json
-// @Param id path int true "ID пользователя"
+// @Param id path int true "User id"
 // @Success 200 {object} UserResponse
 // @Failure 400 {object} BadRequest
-// @Router /api/v1/users/{id} [get]
+// @Router /api/v2/users/{id} [get]
 func GetUserHandlerWithSchema(c *gin.Context) {
 	user := UserResponse{
 		ID:    1,
