# src/docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Это тестовый сервер Swagger для Gin.",
+        "description": "Test Swagger for Gin.",
         "title": "Example API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
@@ -20,7 +20,7 @@
     "paths": {
         "/api/v1/create": {
             "post": {
-                "description": "Создает новый объект, принимая JSON в теле запроса",
+                "description": "Received json body",
                 "consumes": [
                     "application/json"
                 ],
@@ -30,10 +30,10 @@
                 "tags": [
                     "create"
                 ],
-                "summary": "Создать новый объект",
+                "summary": "Data from body",
                 "parameters": [
                     {
-                        "description": "Тело запроса",
+                        "description": "Body",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -67,7 +67,7 @@
         },
         "/api/v1/hello": {
             "get": {
-                "description": "Возвращает сообщение \"Hello, World!\"",
+                "description": "Returns \"Hello, World!\"",
                 "consumes": [
                     "application/json"
                 ],
@@ -89,7 +89,7 @@
         },
         "/api/v1/key/{key}": {
             "get": {
-                "description": "Возвращает переданный ключ",
+                "description": "Return key from path param",
                 "consumes": [
                     "application/json"
                 ],
@@ -99,11 +99,11 @@
                 "tags": [
                     "example"
                 ],
-                "summary": "Получить значение по ключу",
+                "summary": "Get key from path param",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Ключ",
+                        "description": "Key",
                         "name": "key",
                         "in": "path",
                         "required": true
@@ -124,7 +124,7 @@
         },
         "/api/v1/search": {
             "get": {
-                "description": "Возвращает результаты поиска по параметру \"q\" и отображает выбранную страницу через параметр \"page\"",
+                "description": "Get \"q\" and \"page\" query params",
                 "consumes": [
                     "application/json"
                 ],
@@ -134,17 +134,17 @@
                 "tags": [
                     "search"
                 ],
-                "summary": "Поиск по query-параметрам",
+                "summary": "Get query params",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Поисковый запрос",
+                        "description": "Search query",
                         "name": "q",
                         "in": "query"
                     },
                     {
                         "type": "integer",
-                        "description": "Номер страницы",
+                        "description": "Pagination",
                         "name": "page",
                         "in": "query"
                     }
@@ -171,7 +171,7 @@
                 }
             }
         },
-        "/api/v1/users/{id}": {
+        "/api/v2/users/{id}": {
             "get": {
                 "description": "description",
                 "consumes": [
@@ -183,11 +183,11 @@
                 "tags": [
                     "with_schema"
                 ],
-                "summary": "Ручка с указанной схемой",
+                "summary": "Endpoint with schema",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "ID пользователя",
+                        "description": "User id",
                         "name": "id",
                         "in": "path",
                         "required": true
